# Exercises-Solutions

./: .gitignore  CMakeLists.txt
Exercises/Exercise03/: vadd.cpp
Exercises/Exercise03/Cpp/: vadd.cpp
Exercises/Exercise04/Cpp/: vadd.cpp
Exercises/Exercise05/: vadd.cpp
Exercises/Exercise05/Cpp/: vadd.cpp
Exercises/Exercise06/: matmul.cpp
Exercises/Exercise06/Cpp/: matmul.cpp
Exercises/Exercise09/: pi.cpp
Exercises/Exercise09/Cpp/: pi.cpp
Exercises/Exercise13/CUDA-VADD/: vadd.cu
Solutions/Exercise04/: vadd_chain.cl  vadd_chain.cpp
Solutions/Exercise04/Cpp/: vadd_chain.cl  vadd_chain.cpp
Solutions/Exercise05/: vadd_abc.cpp
Solutions/Exercise05/Cpp/: vadd_abc.cpp
Solutions/Exercise06/: matmul.cpp
Solutions/Exercise06/Cpp/: matmul.cpp
Solutions/Exercise07/: C_elem.cl  C_row.cl  C_row_priv.cl  matmul.cpp  matmul.hpp
Solutions/Exercise07/Cpp/: matmul.cpp
Solutions/Exercise08/: C_block_form.cl  C_elem.cl  C_row.cl  C_row_priv.cl  C_row_priv_bloc.cl  matmul.cpp
Solutions/Exercise08/Cpp/: matmul.cpp  matrix_lib.cpp
Solutions/Exercise09/: pi_ocl.cl  pi_ocl.cpp
Solutions/Exercise09/Cpp/: pi_ocl.cpp
Solutions/Exercise13/: gameoflife.cl
Solutions/Exercise13/Cpp/: gameoflife.cpp
Solutions/ExerciseA/: pi_vocl.cl  pi_vocl.cpp
Solutions/ExerciseA/Cpp/: pi_vocl.cpp
Solutions/matrix_multiply/: main.cpp
Solutions/matrix_multiply_basic/: main.cpp
Solutions/matrix_multiply_blocked/: main.cpp
Solutions/vector_add/: main.cpp
Solutions/vector_add_multiple/: main.cpp
Tools/: genErrCode.py
common/: matrix_lib.cpp  matrix_lib.hpp  util.hpp
